--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PizzaCare</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -265,7 +265,7 @@
           </div>
         </div>
         <div class="col-b">
-          <img src="assets/pizzaiolo.jpg" alt="pizzaiolo mostrando pizza perto dos funcionarios da pizzaria">
+          <img src="./assets/pizzaiolo.jpg" alt="pizzaiolo mostrando pizza perto dos funcionarios da pizzaria">
         </div>
       </div>
     </section>
@@ -303,7 +303,7 @@
           </div>
         </div>
         <div class="col-b">
-          <img src="/assets/homem-negro-com-moletom-bege-mexendo-no-celular.png" alt="homem negro com moletom bege mexendo no celular e sorrindo prestes a pedir pizza pelo nosso app">        
+          <img src="./assets/homem-negro-com-moletom-bege-mexendo-no-celular.png" alt="homem negro com moletom bege mexendo no celular e sorrindo prestes a pedir pizza pelo nosso app">        
         </div>
       </div>
     </section>
